--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -68,10 +68,11 @@
 .search-results {
   padding: 20px 0 0;
   text-align: center;
+  font-size: 20px;
 }
 
 .nothing-found {
-  @include text (22px, $regular, center);
+  @include text(22px, $regular, center);
   margin: 60px 0 0 0;
 }
 /* ---------- */
