--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -55,4 +55,10 @@
 .modal-body {
   margin: 0 50px 0;
 }
+
+@media (max-width: $handheld-size) {
+  .modal-body {
+    margin: 0 25px 0;
+  }
+}
 /* ---------- */
